# tracefault

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  use.md
.streamlit/: config.toml
backend/: knowledge_base.py
backend/agents/: __init__.py  general_agent.py  qa_agent.py  rag_agent.py
backend/community/: readme.md
backend/config/: neo4jdb.py  settings.py
backend/graph/: __init__.py  graph_consistency_validator.py  readme.md
backend/integrations/: __init__.py  main.py
backend/intent_recognition/: __init__.py  intent_classifier.py  main.py  models.py  query_rewriter.py  term_mapping.py
backend/models/: get_models.py  test_stream_model.py
backend/pipelines/: README.md  __init__.py  document_processor.py  file_reader.py  models.py  text_chunker.py
backend/search/: __init__.py  global_search.py  local_search.py  readme.md  retrieval_adapter.py  tool_registry.py
backend/session_manager/: __init__.py  compressor.py  manager.py
data/: equipment_fault_qa.db
data/test/: test.md  test.txt
frontend/: __init__.py  main.py
frontend/common/: base.py  constants.py  session.py
frontend/components/: chat.py  chat_message.py  debug.py  doc_management.py  graph_view.py  layout.py  pipeline_view.py  sidebar.py  status_bar.py  styles.py
frontend/pages/: admin.py  (+2 more)
scripts/: init_db.py  seed_data.py
tests/: 00_file_process.ipynb  01_graph_pipeline.ipynb  02_graph_build_process.ipynb  03_community_pipeline.ipynb  04_graph_incremental.ipynb  05_search_methods.ipynb  06_intent_recognition.ipynb  llm_test.ipynb
(+60 files in other folders)
