[project]
name = "equipment-fault-qa"
version = "0.1.0"
description = "企业设备故障智能问答系统"
requires-python = ">=3.11"

[project.scripts]
init-db = "scripts.init_db:main"
seed-data = "scripts.seed_data:seed"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
